# volumizer

./: .gitignore  LICENSE  README.md  annotation-refactor-plan.md  gallery  package-lock.json  package.json  pyproject.toml
AGENTS/: BASELINE_METRICS.md  FFI_CONTRACT.md  GALLERY.md  MIGRATION_PLAN.md  OUTLINE.md  PERFORMANCE_REPORT.md  README.md  STATUS.md  benchmark.baseline.json  benchmark.ctypes-c.json  benchmark.ctypes-c.orchestration.json  benchmark.native.json  benchmark.native.optimized.json  benchmark.native.orchestration.json  benchmark.native.stage-profiling.all.sample.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v1.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v2.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v3.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v4.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v5.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v6.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v6b.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v7.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v7b.json  benchmark.native.stage-profiling.kernel-substages.all.r3.v8.json  benchmark.native.stage-profiling.kernel-substages.large.r3.v4.json  benchmark.native.stage-profiling.kernel-substages.large.r3.v5.json  benchmark.native.stage-profiling.kernel-substages.large.r3.v6.json  benchmark.native.stage-profiling.kernel-substages.large.r3.v7.json  benchmark.native.stage-profiling.kernel-substages.large.r3.v8.json  benchmark.native.stage-profiling.kernel-substages.medium.r3.v4.json  benchmark.native.stage-profiling.kernel-substages.medium.r3.v5.json  benchmark.native.stage-profiling.kernel-substages.medium.r3.v6.json  benchmark.native.stage-profiling.kernel-substages.medium.r3.v7.json  benchmark.native.stage-profiling.kernel-substages.medium.r3.v8.json  benchmark.native.stage-profiling.kernel-substages.small.r3.v4a.json  benchmark.native.stage-profiling.load-policy.large.asymmetric.r3.v1.json  benchmark.native.stage-profiling.load-policy.large.auto.r3.v1.json  benchmark.native.stage-profiling.load-policy.large.biological.r3.v1.json  benchmark.native.stage-profiling.load-policy.medium.asymmetric.r3.v1.json  (+20 more)
native/: Cargo.toml  README.md
native/src/: lib.rs
pore/: align.py  analysis.py  cli.py  constants.py  fib_sphere.py  mongo.py  paths.py  pdb.py  pore.py  rcsb.py  types.py  utils.py  voxel.py
scripts/: benchmark.py  bootstrap_linux.sh  build_gallery_index.py  check_native_perf_regression.py  clean_corrupt_downloads.py  drop_collection.py  get_pores.py  molstar_render_single.mjs  porate.py  query_gallery_index.py  rebuild_gallery.sh  render_gallery_thumbnails.py  rerender_gallery_targets.py  serve_gallery.py  view_database_snapshot.py  volumize.py
source/: compile_c_libs.sh  fib_sphere.c  voxel.c  voxel_compute.c
src/: compile_c_libs.sh
tests/: parity_helpers.py  test_align.py  test_cli.py  test_cross_section_metrics.py  test_fib_sphere.py  test_fib_sphere_native_parity.py  test_gallery_web.py  (+15 more)
(+51 files in other folders)
