[project]
name = "volumizer"
version = "0.1.5"
description = "Search the RCSB for occluded volumes like cavities, pockets, and pores."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Aron Broom", email = "broomsday@gmail.com" },
]
keywords = [
  "structural-biology",
  "protein",
  "pdb",
  "bioinformatics",
  "cavity-detection",
  "pocket-detection",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.23,<2.0",
  "pyntcloud>=0.1.5,<0.2.0",
  "biotite>=0.37.0,<0.38.0",
]

[project.urls]
Homepage = "https://github.com/broomsday/volumizer"
Repository = "https://github.com/broomsday/volumizer"
Issues = "https://github.com/broomsday/volumizer/issues"
Changelog = "https://github.com/broomsday/volumizer/releases"

[project.scripts]
volumizer = "volumizer.cli:main"

[dependency-groups]
test = [
  "pytest>=6.2,<7.0",
]
native = [
  "maturin>=1.6,<2.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["volumizer"]
